[package]
name = "rustup-available-packages-html"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]

[dependencies]
chrono = "0.4.6"
either = "1.5.0"
failure = "0.1.2"
fern = "0.5.6"
handlebars = "1.0.3"
log = { version = "0.4.5", features = [ "serde" ] }
rustup-available-packages = { path = "../library/" }
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
structopt = "0.2.10"
