[package]
name = "rustup-available-packages-term"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]

[dependencies]
chrono = "0.4.6"
either = "1.5.0"
failure = "0.1.2"
fern = "0.5.6"
log = "0.4.5"
prettytable-rs = "0.8.0"
rustup-available-packages = { path = "../library/" }
structopt = "0.2.10"
