[package]
name = "rustup-available-packages-web"
version = "0.1.3"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
either = "1.5.0"
failure = "0.1.2"
fern = "0.5.6"
handlebars = "1.0.3"
itertools = "0.8.0"
log = { version = "0.4.5", features = [ "serde" ] }
rustup-available-packages = { path = "../library/" }
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
structopt = "0.2.10"
