[package]
name = "rustup-available-packages-web"
version = "0.1.3"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
anyhow = "1"
handlebars = "1.0.3"
env_logger = "0.7"
log = { version = "0.4.5", features = ["serde"] }
rustup-available-packages = { path = "../library/" }
serde = { version = "1", features = [ "derive" ] }
serde_yaml = "0.8"
serde_json = "1"
structopt = "0.2.10"
