[package]
name = "rustup-available-packages-web"
version = "0.1.3"
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4.23"
env_logger = "0.10"
handlebars = "4"
log = { version = "0.4.17", features = ["serde"] }
reqwest = "0.11.14"
rustup-available-packages = { path = "../library" }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.9"
structopt = "0.3"
strum = { version = "0.24.1", features = ["derive"] }
tl = "0.7.7"
